--- a/pyVerein/members/templates/members/index.html
+++ b/pyVerein/members/templates/members/index.html
@@ -2,7 +2,7 @@
   <ul>
     {% for member in members %}
       <li>
-        <a href="{% url 'detail' member.id %}">{{member.get_full_name}}</a>
+        <a href="{% url 'members:detail' member.id %}">{{member.get_full_name}}</a>
       </li>
     {% endfor %}
   </ul>
