--- a/pyVerein/app/templates/app/index.html
+++ b/pyVerein/app/templates/app/index.html
@@ -55,17 +55,17 @@
               <!-- User Account: style can be found in dropdown.less -->
               <li class="dropdown user user-menu">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                  <img src="dist/img/user2-160x160.jpg" class="user-image" alt="User Image">
-                  <span class="hidden-xs">Alexander Pierce</span>
+                  <img src="{% static 'app/images/user.png' %}" class="user-image" alt="User Image">
+                  <span class="hidden-xs">User</span>
                 </a>
                 <ul class="dropdown-menu">
                   <!-- User image -->
                   <li class="user-header">
-                    <img src="dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
+                    <img src="{% static 'app/images/user.png' %}" class="img-circle" alt="User Image">
 
                     <p>
-                      Alexander Pierce - Web Developer
-                      <small>Member since Nov. 2012</small>
+                      User
+                      <small>Usertitle</small>
                     </p>
                   </li>
                   <!-- Menu Footer-->
