--- a/pyVerein/app/templates/app/index.html
+++ b/pyVerein/app/templates/app/index.html
@@ -15,6 +15,8 @@
     <link rel="stylesheet" href="{% static 'app/bower_components/Ionicons/css/ionicons.min.css' %}">
     <!-- Theme style -->
     <link rel="stylesheet" href="{% static 'app/dist/css/AdminLTE.min.css' %}">
+    <!-- DataTables -->
+    <link rel="stylesheet" href="{% static 'app/bower_components/datatables.net-bs/css/dataTables.bootstrap.min.css' %}">
     <!-- AdminLTE Skins. Choose a skin from the css/skins
          folder instead of downloading all of them to reduce the load. -->
     <link rel="stylesheet" href="{% static 'app/dist/css/skins/_all-skins.min.css' %}">
@@ -182,20 +184,27 @@
     <script src="{% static 'app/dist/js/adminlte.min.js' %}"></script>
     <!-- SlimScroll -->
     <script src="{% static 'app/bower_components/jquery-slimscroll/jquery.slimscroll.min.js' %}"></script>
+    <!-- DataTables -->
+    <script src="{% static 'app/bower_components/datatables.net/js/jquery.dataTables.min.js' %}"></script>
     <!-- Ajax content call -->
     <script type="text/javascript">
+      var link;
       var last_link;
-      $(".ajaxlink").on("click", function(e){
+
+      $(".ajaxlink").click(function(e){
         e.preventDefault();
-        last_link = $(this);
+        link = $(this);
         var request = $.get(
-          last_link.attr("href");
+          link.attr("href")
         );
         request.done(
           function(response){
+            if(last_link){
+              last_link.parents("li").removeClass("active")
+            }
+            link.parents("li").addClass("active");
+            last_link = link;
             $("#maincontent").html(response);
-            console.log(last_link);
-            last_link.parent("li").addClass("active");
           }
         );
       });
