Added datatables bootstrap js.

--- a/pyVerein/app/templates/app/index.html
+++ b/pyVerein/app/templates/app/index.html
@@ -186,6 +186,7 @@
     <script src="{% static 'app/bower_components/jquery-slimscroll/jquery.slimscroll.min.js' %}"></script>
     <!-- DataTables -->
     <script src="{% static 'app/bower_components/datatables.net/js/jquery.dataTables.min.js' %}"></script>
+    <script src="{% static 'app/bower_components/datatables.net-bs/js/dataTables.bootstrap.min.js' %}"></script>
     <!-- Ajax content call -->
     <script type="text/javascript">
       var link;
