--- a/pyVerein/members/templates/members/detail.html
+++ b/pyVerein/members/templates/members/detail.html
@@ -2,7 +2,7 @@
   <div class="col-xs-12">
     <div class="box">
       <div class="box-header">
-        {{object.get_full_name}}
+        {{member.get_full_name}}
       </div>
       <div class="box-body">
 
