--- a/pyVerein/app/static/app/styles.css
+++ b/pyVerein/app/static/app/styles.css
@@ -1,3 +1,10 @@
+body{
+    font-size:large;
+}
 .table-hover>tbody>tr:hover{
     cursor: pointer;
+}
+
+.data .field-title{
+    text-align: right;
 }
